removes legacy block about comparison with sparce coding

--- a/Seminar1/Homework 1 (Face Recognition).ipynb
+++ b/Seminar1/Homework 1 (Face Recognition).ipynb
@@ -232,25 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time we don't have any restriction on number of non-zero coefficients in the vector decomposition, so the codes are not sparse anymore:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Transform training data and plot decomposition coefficients."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Train an SVM and apply it to the encoded test data."
+    "Transform training data, train an SVM and apply it to the encoded test data."
    ]
   },
   {
@@ -309,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
