fix: n_nonzero to n_components

--- a/Seminar1/Homework 1 (Face Recognition).ipynb
+++ b/Seminar1/Homework 1 (Face Recognition).ipynb
@@ -269,7 +269,7 @@
     "# Try different numbers of components and populate 'accuracy' list.\n",
     "    \n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(n_nonzero, accuracy)\n",
+    "plt.plot(n_components, accuracy)\n",
     "\n",
     "print('Max accuracy: {}'.format(max(accuracy)))"
    ]
