--- a/Seminar3/HW3_Modules.ipynb
+++ b/Seminar3/HW3_Modules.ipynb
@@ -699,7 +699,8 @@
     "    def updateOutput(self, input, target): \n",
     "        \n",
     "        # Use this trick to avoid numerical errors\n",
-    "        input_clamp = np.maximum(1e-15, np.minimum(input, 1 - 1e-15) )\n",
+    "        eps = 1e-15 \n
+    "        input_clamp = np.clip(input, eps, 1 - eps)\n",
     "        \n",
     "        # Your code goes here. ################################################\n",
     "        return self.output\n",
