Lasagne installation fix

--- a/Seminar4/Seminar4-ru-mnist.ipynb
+++ b/Seminar4/Seminar4-ru-mnist.ipynb
@@ -25,8 +25,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install Theano\n",
-    "!pip install lasagne"
+    "!pip install -r https://raw.githubusercontent.com/Lasagne/Lasagne/master/requirements.txt\n",
+    "!pip install https://github.com/Lasagne/Lasagne/archive/master.zip"
    ]
   },
   {
@@ -1591,9 +1591,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1605,7 +1605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
