--- a/Seminar4/Seminar4-ru-mnist.ipynb
+++ b/Seminar4/Seminar4-ru-mnist.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r https://raw.githubusercontent.com/Lasagne/Lasagne/master/requirements.txt\n",
+    "!pip install install Theano==0.8.2\n",
     "!pip install https://github.com/Lasagne/Lasagne/archive/master.zip"
    ]
   },
