Bring up to consistency `print`s with Python 3.

--- a/Seminar3/HW3_main.ipynb
+++ b/Seminar3/HW3_main.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "criterion = ClassNLLCriterion()\n",
     "\n",
-    "print net\n",
+    "print(net)\n",
     "\n",
     "# Test something like that then \n",
     "\n",
