Fix batch generator.

--- a/Seminar3/HW3_main.ipynb
+++ b/Seminar3/HW3_main.ipynb
@@ -235,7 +235,8 @@
    "outputs": [],
    "source": [
     "# batch generator\n",
-    "def get_batches( (X, Y) , batch_size):\n",
+    "def get_batches(dataset, batch_size):\n",
+    "    X, Y = dataset\n",
     "    n_samples = X.shape[0]\n",
     "        \n",
     "    # Shuffle at the start of epoch\n",
@@ -276,7 +277,7 @@
     "loss_history = []\n",
     "\n",
     "for i in range(n_epoch):\n",
-    "    for x_batch, y_batch in get_batches( (X,Y) , batch_size):\n",
+    "    for x_batch, y_batch in get_batches((X, Y), batch_size):\n",
     "        \n",
     "        net.zeroGradParameters()\n",
     "        \n",
