--- a/Seminar5/Seminar6.ipynb
+++ b/Seminar5/Seminar6.ipynb
@@ -122,7 +122,7 @@
     "    \n",
     "    #convert from [w,h,3 to 1,3,w,h]\n",
     "    img = np.transpose(img, (2, 0, 1))[None]\n",
-    "    return img\n",
+    "    return img.astype(floatX)\n",
     "\n",
     "def deprocess(img):\n",
     "    img = img.reshape(img.shape[1:]).transpose((1, 2, 0))\n",
