Bring it up to compatibility to python3.

--- a/Seminar5/Seminar6.ipynb
+++ b/Seminar5/Seminar6.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Week6\n",
     "\n",
@@ -13,26 +16,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
+    "from sys import version_info\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import os\n",
+    "import scipy\n",
     "import theano\n",
     "import theano.tensor as T\n",
     "import lasagne\n",
-    "import cPickle as pickle\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "try:\n",
+    "    import cPickle as pickle\n",
+    "except ImportError:\n",
+    "    import pickle\n",
+    "\n",
     "%matplotlib inline\n",
-    "import scipy\n",
+    "\n",
     "from scipy.misc import imread, imsave, imresize\n",
     "from lasagne.utils import floatX"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Model Zoo (4 pts)\n",
     "Lasagne has a plethora of pre-training netrworks in the [model zoo](https://github.com/Lasagne/Recipes/tree/master/modelzoo)\n",
@@ -48,7 +65,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -59,7 +78,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -84,19 +105,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "#classes' names are stored here\n",
-    "classes = pickle.load(open('classes.pkl'))\n",
+    "classes = pickle.load(open('classes.pkl', 'rb'))\n",
     "#for example, 10th class is ostrich:\n",
-    "print classes[9]"
+    "print(classes[9])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "You have to implement two functions in the cell below.\n",
     "\n",
@@ -108,7 +134,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -122,29 +150,35 @@
     "    \n",
     "    #convert from [w,h,3 to 1,3,w,h]\n",
     "    img = np.transpose(img, (2, 0, 1))[None]\n",
-    "    return img.astype(floatX)\n",
+    "    return floatX(img)\n",
     "\n",
     "def deprocess(img):\n",
     "    img = img.reshape(img.shape[1:]).transpose((1, 2, 0))\n",
-    "    for i in xrange(3):\n",
+    "    for i in range(3):\n",
     "        img[:,:, i] += MEAN_VALUES[i]\n",
     "    return img[:, :, :: -1].astype(np.uint8)\n",
     "\n",
     "img = (np.random.rand(IMAGE_W, IMAGE_W, 3) * 256).astype(np.uint8)\n",
     "\n",
-    "print np.linalg.norm(deprocess(preprocess(img)) - img)"
+    "print(np.linalg.norm(deprocess(preprocess(img)) - img))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "If your implementation is correct, the number above will be small, because deprocess function is the inverse of preprocess function"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Deploy the network"
    ]
@@ -153,7 +187,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -164,13 +200,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open('weights.pkl') as f:\n",
-    "    weights = pickle.load(f)\n",
+    "with open('weights.pkl', 'rb') as f:\n",
+    "    if version_info.major == 2:\n",
+    "        weights = pickle.load(f)\n",
+    "    elif version_info.major == 3:\n",
+    "        weights = pickle.load(f, encoding='latin1')\n",
     "    \n",
     "<load weights into the network>"
    ]
@@ -179,7 +219,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -191,7 +233,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Sanity check\n",
     "Let's make sure our network actually works. \n",
@@ -203,7 +248,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -214,14 +261,17 @@
     "p = prob(preprocess(img))\n",
     "\n",
     "labels = p.ravel().argsort()[-1:-6:-1]\n",
-    "print 'top-5 classes are:'\n",
+    "print('top-5 classes are:')\n",
     "for l in labels:\n",
-    "    print '%3f\\t%s' % (p.ravel()[l], classes[l].split(',')[0])"
+    "    print('%3f\\t%s' % (p.ravel()[l], classes[l].split(',')[0]))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "##### Ouch!\n",
     "Try running network 2-3 times. If output changes, then we've probably done something wrong.\n",
@@ -235,7 +285,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Fun opportunity\n",
     "\n",
@@ -246,7 +299,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Grand-quest: Dogs Vs Cats (6 pts)\n",
     "* original competition\n",
@@ -260,34 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2017-03-15 18:55:12--  https://www.dropbox.com/s/d61lupw909hc785/dogs_vs_cats.train.zip?dl=1\n",
-      "Resolving www.dropbox.com (www.dropbox.com)... 162.125.80.1\n",
-      "Connecting to www.dropbox.com (www.dropbox.com)|162.125.80.1|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://dl.dropboxusercontent.com/content_link/ZPzVUplymendrxRNUvsAVUq2y04dwxfSmh5KtkKVLOShoBvVhFEd9u0zF5QhvrUK/file?dl=1 [following]\n",
-      "--2017-03-15 18:55:14--  https://dl.dropboxusercontent.com/content_link/ZPzVUplymendrxRNUvsAVUq2y04dwxfSmh5KtkKVLOShoBvVhFEd9u0zF5QhvrUK/file?dl=1\n",
-      "Resolving dl.dropboxusercontent.com (dl.dropboxusercontent.com)... 162.125.66.6\n",
-      "Connecting to dl.dropboxusercontent.com (dl.dropboxusercontent.com)|162.125.66.6|:443... connected.\n",
-      "^C\n",
-      "Archive:  data.zip\n",
-      "  End-of-central-directory signature not found.  Either this file is not\n",
-      "  a zipfile, or it constitutes one disk of a multi-part archive.  In the\n",
-      "  latter case the central directory and zipfile comment will be found on\n",
-      "  the last disk(s) of this archive.\n",
-      "unzip:  cannot find zipfile directory in one of data.zip or\n",
-      "        data.zip.zip, and cannot find data.zip.ZIP, period.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://www.dropbox.com/s/d61lupw909hc785/dogs_vs_cats.train.zip?dl=1 -O data.zip\n",
     "!unzip data.zip\n",
@@ -296,7 +331,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# for starters\n",
     "* Train sklearn model, evaluate validation accuracy (should be >80%"
@@ -306,14 +344,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "#extract features from images\n",
     "from tqdm import tqdm\n",
     "from scipy.misc import imresize\n",
-    "import os\n",
+    "\n",
     "X = []\n",
     "Y = []\n",
     "\n",
@@ -331,7 +371,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -348,7 +390,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -359,7 +403,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "__load our dakka__\n",
     "![img](https://s-media-cache-ak0.pinimg.com/564x/80/a1/81/80a1817a928744a934a7d32e7c03b242.jpg)"
@@ -369,7 +416,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -382,7 +431,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "# Main quest\n",
@@ -440,18 +491,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"I can do it!\""
+    "print(\"I can do it!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -460,7 +515,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -469,7 +526,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -478,7 +537,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -487,7 +548,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -495,21 +558,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
