--- a/Seminar8/VAE_homework.ipynb
+++ b/Seminar8/VAE_homework.ipynb
@@ -470,9 +470,9 @@
    "source": [
     "# Congrats!\n",
     "\n",
-    "If you managed to tune your autoencoders to converge and learn something about the world, now it's time to make fun out of it. As you may have noticed, there are labels in dataset, some unknown real values, face attribute. Here is the first task:\n",
+    "If you managed to tune your autoencoders to converge and learn something about the world, now it's time to make fun out of it. As you may have noticed, there are face attributes in dataset. We're interesting in \"Smiling\" column, but feel free to try others as well! Here is the first task:\n",
     "\n",
-    "1) Sort by the attribute and find out what it is about."
+    "1) Extract the \"Smilling\" column as a separate numpy vector and sort this vector."
    ]
   },
   {
@@ -483,8 +483,7 @@
    },
    "outputs": [],
    "source": [
-    "attrs[:10]\n",
-    "#You're after \"Smiling\" column, but feel free to try others as well!"
+    "attrs[:10]\n"
    ]
   },
   {
@@ -502,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Take z-representations of those top images (you can do it only for positive of for both) and average them to find **\"vector representation\"** of the attribute.\n",
+    "2) Take z-representations of those top images (you can do it only for positive or for both) and average them to find **\"vector representation\"** of the attribute.\n",
     "\n",
     "3) Show how **\"feature arithmetics\"** works with representations of both VAE and conventional autoencoder. Show how to generate an image with preconditioned attribute. Take some sad faces and make them smiling.\n",
     "\n",
