--- a/Seminar11/Seminar11-Image-Captioning.ipynb
+++ b/Seminar11/Seminar11-Image-Captioning.ipynb
@@ -399,11 +399,7 @@
     "reference_answers = sentences[:,1:].reshape((-1,))\n",
     "\n",
     "#write symbolic loss function to train NN for\n",
-    "loss = <compute elementwise loss function>\n",
-    "\n",
-    "#mean over non-PAD tokens\n",
-    "output_mask = sentence_mask[:,1:]\n",
-    "loss = (loss.reshape(reference_answers.shape)*output_mask).sum() / output_mask.sum()"
+    "loss = <compute elementwise loss function>\n"
    ]
   },
   {
@@ -813,21 +809,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
