--- a/Seminar12/a2c_kungfu_dmia.ipynb
+++ b/Seminar12/a2c_kungfu_dmia.ipynb
@@ -136,13 +136,10 @@
    ],
    "source": [
     "import gym\n",
-    "from agentnet.experiments.openai_gym.wrappers import PreprocessImage\n",
     "#game maker consider https://gym.openai.com/envs\n",
     "def make_env():\n",
     "    env = gym.make(\"KungFuMaster-v0\")\n",
-    "    return PreprocessImage(env,height=64,width=64,\n",
-    "                           grayscale=True,\n",
-    "                           crop=lambda img:img[50:-10,7:])\n",
+    "    return PreprocessAtari(env)\n",
     "\n",
     "\n",
     "\n",
